# mcp-lazy-orchestrator

./: .gitignore  AI_WORKFLOW_EXPLANATION.md  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_HYBRID_SOLUTION.md  FINAL_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_CODE.md  README.md  RESUME_RU.md  SUMMARY_FINAL.md  TODO.md  pyproject.toml  pytest.ini
capabilities/: base.yaml
config/: claude-desktop.json
docs/: README_RU.md
scripts/: setup-github.sh
src/mcp_orchestrator/: __init__.py  analyzer.py  capabilities.py  discovery.py  monitor.py  profiles.py  registry.py  router.py  server.py  telemetry.py
src/orchestrator/: connection_pool.py  docker_client.py  exceptions.py  proxy.py  server.py
src/orchestrator/tools/config/: config_set.py
src/orchestrator/tools/servers/: start.py  stop.py
tests/: __init__.py  test_orchestrator.py
